# The_Floor_Control_Circuit

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PREREG.md  README.md  pyproject.toml
configs/: events.yaml  grids.yaml  paths.windows.yaml  stimuli.yaml
reports/: candor_extract_probe_train_summary.json  candor_extract_probe_val_summary.json  candor_extract_summary.json  candor_index_summary.json  context_stress_conclusion_20260720.md  duplexconv_release_audit.json  duplexconv_release_audit.md  duplexconv_selfcheck.json  e1_完整实验结论.artifact.json  e1_完整实验结论.html  e1_完整实验结论.md  e1_探针网格加速分析.md  e1_探针网格报告.md  e1_有效秩描述性诊断.md  e1x_e2_lite_综合结论.artifact.json  e1x_e2_lite_综合结论.html  e1x_e2_lite_综合结论.md  e1x_探索套件报告.md  e2_lite_优化与等价性报告.md  e2_lite_行为报告_optimized.md  g0_confirmation.json  g0_diagnosis.json  g0_gate_derivation.json  g0_postmortem.json  g0_postmortem_artifact.json  g0_protocol_check.json  g0_reference_recompute.json  g0_selftest.json  g0_summary.json  g0_train_confirmation.json  g0_train_确认报告.md  g0_修复后失败诊断.html  g0_校准报告.md  g0_确认报告.md  g0_诊断报告.md  mimi_chunk_grid.json  minicpm_o_dense_context_conclusion_20260720.md  minicpm_o_smoke_round4_stderr.txt  minicpm_o_smoke_round4_stdout.txt  minicpm_o_smoke_stderr.txt  (+74 more)
scripts/: _bootstrap.py  clean_repo_caches.ps1  prereg_fingerprint.py  run_checks.ps1  wp1_audit_events.py  wp1_g0_calibrate.py  wp1_g0_diagnose.py  wp1_g0_postmortem.py  wp1_g0_postmortem_report.py  wp1_g0_postmortem_report.sql  wp1_g0_prepare.py  wp1_g0_reference_recompute.py  wp1_g0_train_roster.py  wp1_run_events.py  wp1_t4_audit.py  wp1_t4_human_audit.py  wp2_audit_duplexconv_release.py  wp2_candor_index.py  wp2_extract_candor.py  wp2_freeze_splits.py  wp2_parse_smoothconv.py  wp3_v2_inspect_dualturn.py  wp5_ingest.py  wp6_build_stimuli.py  wp6_repair_short_tts.py  wp7_audit_mve.py  wp7_cache_mve.py  wp7_context_segments.py  wp7_run_mve.py  wp7_text_mode_ab.py  wp_context_stress_analyze.py  wp_e1_cache_audit.py  wp_e1_cache_parity.py  wp_e1_cache_plan.py  wp_e1_complete_report.py  wp_e1_effective_rank_diagnostics.py  wp_e1_geometry_autopsy.py  wp_e1_ingest.py  wp_e1_mimi_chunk_probe.py  wp_e1_probe_grid.py  (+14 more)
tests/: conftest.py  test_cache_mve.py  test_context_stress.py  test_data_parsers.py  test_dualturn_g0.py  test_duplexconv_release_audit.py  test_e1_cache_v2.py  test_e1_effective_rank_diagnostics.py  test_e1_foundations.py  test_e1_geometry_autopsy.py  test_e1_probe_grid.py  test_e1x_deep.py  test_e1x_suite.py  test_e2_confirm.py  test_e2_lite.py  test_easy_turn_runner.py  test_event_cache_transaction.py  test_event_integrity_audit.py  test_events_core.py  test_g0.py  test_g0_gate.py  test_g0_official.py  test_g0_pipeline_guards.py  test_g0_reference_parity.py  test_labels.py  test_maai_runner.py  test_matching.py  test_minicpm_dense_context.py  test_minicpm_runner.py  test_minicpm_true_context.py  test_mve_artifacts.py  test_mve_g1_hardening.py  test_mve_independent_audit.py  test_mve_memory_safe.py  test_mve_pipeline_guards.py  test_pairing.py  test_round11_tools.py  test_smart_turn_runner.py  test_splits_probes.py  test_stimuli.py  (+1 more)
文档/: 00_原始计划.md  01_本地路径.md  02_w1+w2计划.md  03_w3+w4计划.md  (+5 more)
(+87 files in other folders)
